--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         <!--CODECLICKER--> 
         <div class="main__content-container" id="codeclicker">
             <div class="main__content-text-container">
-                <div class="main__content-text-type">En développement</div>
+                <div class="main__content-text-type">Projet collaboratif à 5</div>
                 <div class="main__content-text-title">Code Clicker</div>
                 <div class="main__content-text-descr">CodeClicker est un idle/clicker game sur le thème du développement web. Vous y interpréterez un jeune développeur qui souhaite monter en compétence. De plus, vous pourrez vous aussi résoudre des challenges de programmation et d'algorithmie afin de progresser plus rapidement dans le jeu. </div>
                 <div class="main__content-text-technos">
@@ -84,7 +84,7 @@
                     <div class="main__content-text-techno">PSQL</div>
                 </div>   
             </div>
-        <img src="codeclicker.png" class="main__content-img" alt="">
+        <a href="www.codeclicker.dev"><img src="codeclicker.png" class="main__content-img" alt=""></a>
         </div>
 
         <!--VDB--> 
@@ -126,17 +126,14 @@
                 </div>
             </div>
             </div>
-            <!--VDB--> 
+            <!--MATHS--> 
         <div class="main__content-container" id="maths">
             <div class="main__content-text-container">
-                <div class="main__content-text-type">En production Freelance</div>
-                <div class="main__content-text-title">VDB</div>
-                <div class="main__content-text-descr">Cette application web est un intranet développée pour les Vedettes de Bréhat. Elle permet de faire transiter de l'information de manière plus efficace entre le service comptable et administratif et les différentes équipes opérationnelles qui sont des professionnels de la mer.</div>
-                <div class="main__content-text-technos">
-                    <div class="main__content-text-techno">JS vanilla</div>
-                    <div class="main__content-text-techno">Express</div>
-                    <div class="main__content-text-techno">PSQL</div>
-                </div>   
+                <div class="main__content-text-type">Enseignement</div>
+                <div class="main__content-text-title">Mathématiques</div>
+                <div class="main__content-text-descr">Après 3 ans passées à travailler dans le secteur de la finance, j'ai décidé d'enseigner les mathématiques dans le secondaire. En charge de 3 classes de 6ème et de classes de première et terminale bac professionnel, cette expérience a été très enrichissante sur le plan profesionnel. </div>  
+                <div class="main__content-gr-info-pin">Question posée le dernier jour aux 6ème : "Qu'avez-vous pensé de la classe de mathématiques cette année?"</div>   
+
             </div>
             <img src="1.png" id="maths_comment" class="main__content-img-maths" alt="">
             <div class="main__content-img-maths-counter" id="maths_comment-counter">1/61</div>
@@ -155,8 +152,8 @@
 
     <div class="footer__container">
         <a href="https://github.com/charleslechevert"><svg  class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--bx"  preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974c0 4.406 2.857 8.145 6.821 9.465c.499.09.679-.217.679-.481c0-.237-.008-.865-.011-1.696c-2.775.602-3.361-1.338-3.361-1.338c-.452-1.152-1.107-1.459-1.107-1.459c-.905-.619.069-.605.069-.605c1.002.07 1.527 1.028 1.527 1.028c.89 1.524 2.336 1.084 2.902.829c.091-.645.351-1.085.635-1.334c-2.214-.251-4.542-1.107-4.542-4.93c0-1.087.389-1.979 1.024-2.675c-.101-.253-.446-1.268.099-2.64c0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336a9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021c.545 1.372.203 2.387.099 2.64c.64.696 1.024 1.587 1.024 2.675c0 3.833-2.33 4.675-4.552 4.922c.355.308.675.916.675 1.846c0 1.334-.012 2.41-.012 2.737c0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974C22 6.465 17.535 2 12.026 2z"></path></svg></a>
-        <a href="https://github.com/charleslechevert"><svg  class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic"  preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg></a>
-        <a href=""><svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--bx" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096a1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277c-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387c2.704 0 3.203 1.778 3.203 4.092v4.71z"></path></svg></a>
+        <a href="mailto:charles.lechevert@outlook.fr"><svg  class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic"  preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg></a>
+        <a href="https://linkedin.com"><svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--bx" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096a1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277c-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387c2.704 0 3.203 1.778 3.203 4.092v4.71z"></path></svg></a>
         <a href="https://instagram.com/charleslechevert"><svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--bx" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216a4.61 4.61 0 0 0-2.633-2.633a6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42a4.607 4.607 0 0 0-2.633 2.633a6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632a6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419a4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187c.043-.962.056-1.267.056-3.71c-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078a1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z" ></path><circle cx="11.994" cy="11.979" r="3.003"></circle></svg></a>
         <div class="footer__color--container">
             <div class="footer__color red"></div>
