--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                     <div class="main__content-text-techno">PSQL</div>
                 </div>   
             </div>
-        <a href="www.codeclicker.dev"><img src="codeclicker.png" class="main__content-img" alt=""></a>
+        <a href="https://codeclicker.dev"><img src="codeclicker.png" class="main__content-img" alt=""></a>
         </div>
 
         <!--VDB--> 
